# aa-recruit

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: automated-checks.yml  release.yml
recruit/: __init__.py  app_settings.py  apps.py  auth_hooks.py  character_event.py  character_event_converters.py  corp_alliance_history.py  corp_history.py  external_character.py  interaction.py  interaction_collector.py  location_converters.py  priority.py  shared_history.py  urls.py  views.py
recruit/templates/recruit/: base.html  index.html
recruit/tests/: test_example.py
testauth/settings/: base.py  local.py
