[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "recruit"
description = "recruit Plugin for Alliance Auth (GitHub Version)"
readme = "README.md"
keywords = [
    "allianceauth",
    "recruit",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.3.1,<5",
]
urls.Changelog = "https://example.com"
urls.Tracker = "https://example.com"

[tool.hatch.version]
path = "recruit/__init__.py"

[tool.hatch.build]
include = [
    "/recruit",
]
